tests/expectations/compiler/group/invalid_fail.out
Error [ETYC0372008]: The value 1 is not a valid `group`
    --> compiler-test:5:16
     |
   5 |         return 1group;
     |                ^^^^^^
